fix(/pastes/[id]): fix alignment, text size and select overflow bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@ body,
 main,
 body > * {
   height: 100%;
+  overflow-y: auto;
 }
 
 .invis {
